--- a/css/index.css
+++ b/css/index.css
@@ -168,22 +168,21 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.navigation {
-  border: 1px solid red;
-  max-width: 800px;
+header {
   width: 100%;
-  margin: 0 auto;
-}
-.Logo {
-  padding: 2%;
   display: flex;
-  flex-direction: row;
 }
-nav {
-  border: 1px solid red;
-  float: right;
-  font-size: 14px;
-  padding: 1rem;
+header nav {
+  font-size: 1.25rem;
+  margin: auto;
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header nav a {
+  text-decoration: none;
+  color: black;
 }
 .footer {
   width: 100%;
@@ -245,9 +244,9 @@ nav {
   width: 30%;
   margin-bottom: 30px;
 }
-.home .btn {
-  width: 100%;
-  background-color: teal;
-  border-radius: 20px;
-  font-size: 18px;
+.home .content-top {
+  border-top: 2px dashed #C0C0C0;
+}
+.home .content-top h2 {
+  padding-top: 20px;
 }
