--- a/less/home-page.less
+++ b/less/home-page.less
@@ -66,11 +66,16 @@
     }
   }
 
-  .btn {
-    width: 100%;
-    background-color: teal;
-    border-radius: 20px;
-    font-size: 18px;
-    
-  }
+    .content-top {
+      border-top: 2px dashed @navigation-border;
+
+      h2 {
+        padding-top: 20px;
+      }
+    }
+
+
+
+
+
 }// home
