--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,20 +1,19 @@
 // Navigation Styles here
-.navigation {
-  border: 1px solid red;
-  max-width: 800px;
+header {
   width: 100%;
-  margin: 0 auto;
-}
-
-.Logo {
-  padding: 2%;
   display: flex;
-  flex-direction: row;
 }
 
-nav {
-  border: 1px solid red;
-  float: right;
-  font-size: 14px;
-  padding: 1rem;
+header nav {
+  font-size: 1.25rem;
+  margin: auto;
+  width: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav a {
+  text-decoration: none;
+  color: black;
 }
