--- a/css/index.css
+++ b/css/index.css
@@ -250,3 +250,18 @@ header nav a {
 .home .content-top h2 {
   padding-top: 20px;
 }
+.home .btn {
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 45px;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  border: 1px solid #C0C0C0;
+  cursor: pointer;
+  font-size: 1.8rem;
+}
